[gd_scene load_steps=19 format=3 uid="uid://c8lwhih3bihrn"]

[ext_resource type="Script" path="res://Scripts/character_movement.gd" id="1_ac4tx"]
[ext_resource type="Script" path="res://addons/random_timers/RandomRangeTimer.gd" id="2_1vope"]
[ext_resource type="PackedScene" uid="uid://dpynb1w5bp435" path="res://Scenes/Player_cutout.tscn" id="2_10mar"]
[ext_resource type="Script" path="res://Scripts/state_handler.gd" id="2_asryv"]
[ext_resource type="Script" path="res://Scripts/tool_state_handler.gd" id="2_yocoj"]
[ext_resource type="Texture2D" uid="uid://bma5h1h68wws1" path="res://Sprites/Tools/Block.png" id="5_8eind"]
[ext_resource type="Texture2D" uid="uid://c6amleg4p5hrr" path="res://Sprites/Tools/Floor.png" id="6_03mwq"]
[ext_resource type="Script" path="res://Scripts/ally_destination.gd" id="6_b7brx"]
[ext_resource type="Texture2D" uid="uid://drqgoqvc2r0ir" path="res://Sprites/Tools/Wall.png" id="7_ax4cp"]
[ext_resource type="Texture2D" uid="uid://bolnvxkb17jnu" path="res://Sprites/Tools/Spring2.png" id="9_h2t1i"]
[ext_resource type="Texture2D" uid="uid://pq5tdr4v7baj" path="res://Sprites/Tools/Spring1.png" id="10_28md6"]
[ext_resource type="Texture2D" uid="uid://dm560fnlb4os8" path="res://Sprites/UI/Testring.png" id="12_u4ifa"]
[ext_resource type="Texture2D" uid="uid://dcx5ej5d7l04" path="res://Sprites/UI/new_icon.png" id="13_rojkq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rih21"]
size = Vector2(59, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_2jk2y"]
radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxw3g"]
size = Vector2(72, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi3p8"]
size = Vector2(953.6, 67.7136)

[sub_resource type="Curve2D" id="Curve2D_d031m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -634, 3, -683.001, -0.706309, 683.001, 0.706309, -16, -228, 0, 0, 0, 0, 602, 25, 686.532, 0, -686.532, 0, -2, 274, 0, 0, 0, 0, -634, 3)
}
point_count = 5

[node name="Player" type="CharacterBody2D"]
collision_mask = 102
script = ExtResource("1_ac4tx")

[node name="Blink_timer" type="Timer" parent="."]
script = ExtResource("2_1vope")
min_wait_time = 2.0
max_wait_time = 5.0

[node name="Tool_state_handler" type="Node" parent="."]
script = ExtResource("2_yocoj")

[node name="Cancel_timer" type="Timer" parent="Tool_state_handler"]
wait_time = 0.6
one_shot = true

[node name="State_handler" type="Node" parent="."]
script = ExtResource("2_asryv")

[node name="Coyote" type="Timer" parent="State_handler"]
wait_time = 0.1
one_shot = true

[node name="Jump_buffer" type="Timer" parent="State_handler"]
wait_time = 0.105
one_shot = true

[node name="Model_position" type="Node2D" parent="."]
position = Vector2(10, 0)
scale = Vector2(0.809, 0.809)

[node name="Player_cutout" parent="Model_position" instance=ExtResource("2_10mar")]
position = Vector2(-10, 0)

[node name="P_speed_timer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="Supercancel_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Caster_outer_right_ceiling" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(45, -90)
target_position = Vector2(0, -31)
collision_mask = 6

[node name="Caster_inner_left_ceiling" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(-9, -90)
target_position = Vector2(0, -43)
collision_mask = 6

[node name="Caster_inner_right_ceiling" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(30, -90)
target_position = Vector2(0, -44)
collision_mask = 6

[node name="Caster_outer_left_ceiling" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(-26, -90)
target_position = Vector2(0, -29)
collision_mask = 6

[node name="Caster_right_wall" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(38, -16)
target_position = Vector2(20, 0)
collision_mask = 6

[node name="Caster_right_wall2" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(38, -32)
target_position = Vector2(18, 0)
collision_mask = 6

[node name="Caster_left_wall" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(-20, -16)
target_position = Vector2(-20, 0)
collision_mask = 6

[node name="Caster_left_wall2" type="RayCast2D" parent="."]
z_index = 8
position = Vector2(-20, -32)
target_position = Vector2(-18, 0)
collision_mask = 6

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
z_index = 8
position = Vector2(4, -26)
scale = Vector2(0.809, 0.823)
polygon = PackedVector2Array(-37.6271, -78, 51.8644, -78, 51.8644, 2, 43.7288, 90, -29.4915, 90, -37.6271, 2)

[node name="Sprite_block_tool" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.34902)
z_index = 4
position = Vector2(18.5393, 108.764)
scale = Vector2(0.656, 0.656)
texture = ExtResource("5_8eind")

[node name="Floor_typecheck" type="Area2D" parent="."]
z_index = 8
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor_typecheck"]
position = Vector2(9.5, 63)
shape = SubResource("RectangleShape2D_rih21")

[node name="Sprite_wall_tool" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.34902)
z_index = 4
position = Vector2(190, -1)
scale = Vector2(0.485, 0.734)
texture = ExtResource("7_ax4cp")

[node name="Ally_destination" type="Area2D" parent="."]
position = Vector2(-48.345, 0)
collision_layer = 512
collision_mask = 0
script = ExtResource("6_b7brx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ally_destination"]
shape = SubResource("CircleShape2D_2jk2y")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 253)

[node name="Hurtbox" type="Area2D" parent="."]
z_index = 8
scale = Vector2(0.809, 0.809)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(11, -20)
shape = SubResource("RectangleShape2D_vxw3g")

[node name="Sprite_spring_tool" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.34902)
position = Vector2(148.314, 19.7753)
scale = Vector2(0.704, 0.704)
texture = ExtResource("9_h2t1i")

[node name="Bottom" type="Sprite2D" parent="Sprite_spring_tool"]
modulate = Color(1, 1, 1, 0.34902)
texture = ExtResource("10_28md6")

[node name="Top" type="Sprite2D" parent="Sprite_spring_tool"]
modulate = Color(1, 1, 1, 0.34902)
position = Vector2(0, 81)
texture = ExtResource("10_28md6")

[node name="Testring" type="Sprite2D" parent="."]
position = Vector2(1, 10)
scale = Vector2(31.52, 13.115)
texture = ExtResource("12_u4ifa")

[node name="Sprite_floor_tool" type="Sprite2D" parent="."]
modulate = Color(0.988235, 1, 1, 0.34902)
z_index = 4
position = Vector2(-560.943, -5.68765)
rotation = -0.00539334
scale = Vector2(0.752, 1.148)
skew = 0.01094
texture = ExtResource("6_03mwq")

[node name="Overlap_check" type="Area2D" parent="Sprite_floor_tool"]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite_floor_tool/Overlap_check"]
shape = SubResource("RectangleShape2D_wi3p8")

[node name="Path_floor_tool" type="Path2D" parent="."]
curve = SubResource("Curve2D_d031m")

[node name="Follow_floor_tool" type="PathFollow2D" parent="Path_floor_tool"]
unique_name_in_owner = true
position = Vector2(-634, 3)
rotation = -0.357706
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Path_floor_tool/Follow_floor_tool"]
visible = false
texture = ExtResource("13_rojkq")

[connection signal="timeout" from="P_speed_timer" to="." method="_on_p_speed_timer_timeout"]
[connection signal="body_entered" from="Floor_typecheck" to="." method="_on_floor_typecheck_body_entered"]
[connection signal="body_exited" from="Floor_typecheck" to="." method="_on_floor_typecheck_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Sprite_floor_tool/Overlap_check" to="." method="_on_overlap_check_body_entered"]
[connection signal="body_exited" from="Sprite_floor_tool/Overlap_check" to="." method="_on_overlap_check_body_exited"]
